# cardano-server

./: .gitignore  README.md  build.sh  cabal.project  cardano-server.cabal  hie.yaml  prepare_tests.sh
app/Client/: Main.hs
app/Server/: Main.hs
cardano-server/: cardano-server.cabal
cardano-server-client/: cardano-server-client.cabal
cardano-server-client-example/: cardano-server-client-example.cabal
cardano-server-client-example/app/: Main.hs
cardano-server-client-example/src/Cardano/Server/Client/Example/: Main.hs
cardano-server-client/src/Cardano/Server/Client/: Api.hs  Class.hs  Client.hs  Default.hs  Gen.hs  Handle.hs  Internal.hs  Opts.hs
cardano-server-example/: cardano-server-example.cabal
cardano-server-example/app/: Main.hs
cardano-server-example/src/Cardano/Server/Example/: Input.hs  Main.hs  OffChain.hs  OnChain.hs
cardano-server-test/: cardano-server-test.cabal
cardano-server-test/test/: DefaultClient.hs  ExampleServer.hs  Internal.hs  Main.hs  Reference.hs  TestingServer.hs
cardano-server-test/test/Cardano/Server/: WalletEncryptionSpec.hs
cardano-server-test/test/Cardano/Server/Client/: OptsSpec.hs
cardano-server-test/test/Cardano/Server/Endpoints/: FundsSpec.hs  PingSpec.hs  StatusSpec.hs  UtxosSpec.hs
cardano-server-test/test/Cardano/Server/Endpoints/Tx/: ServerSpec.hs  SubmitSpec.hs
cardano-server-test/test/Cardano/Server/Test/: Gen.hs  Internal.hs  Utils.hs
cardano-server-test/test/Test/: Gen.hs  Internal.hs
cardano-server-test/test/configuration/: config.json
cardano-server-test/test/configuration/node/: config.json
cardano-server-test/test/configuration/wallets/: test-wallet.json
cardano-server-test/test/scripts/: kupo.sh  load_wallet.sh  node.sh  prepare_tests.sh  run.sh  wallet.sh
cardano-server/src/Cardano/Server/: Class.hs  Config.hs  Diagnostics.hs  EndpointHandler.hs  EndpointName.hs  Error.hs  Handler.hs  Input.hs  Internal.hs  Main.hs  Tx.hs  WalletEncryption.hs
cardano-server/src/Cardano/Server/Endpoints/: AddSignature.hs  Funds.hs  Ping.hs  Status.hs  Submit.hs  Utxos.hs  Version.hs
cardano-server/src/Cardano/Server/Endpoints/Tx/: Class.hs  Internal.hs  New.hs  Server.hs  Submit.hs
cardano-server/src/Cardano/Server/Error/: Class.hs  CommonErrors.hs  Servant.hs  ToEnvelope.hs  Utils.hs
cardano-server/src/Cardano/Server/Utils/: ChainIndex.hs  Logger.hs  Wait.hs
src/Cardano/Server/: Class.hs  Config.hs  Error.hs  Input.hs  Internal.hs  Main.hs  Tx.hs
src/Cardano/Server/Client/: Class.hs  Client.hs  Default.hs  Opts.hs
src/Cardano/Server/Endpoints/: AddSignature.hs  Funds.hs  Ping.hs  Servant.hs
src/Cardano/Server/Endpoints/Tx/: Class.hs  Internal.hs  New.hs  Server.hs  Submit.hs
src/Cardano/Server/TestingServer/: Main.hs  OffChain.hs  OnChain.hs
src/Cardano/Server/Utils/: Logger.hs  Wait.hs
src/Client/: Class.hs  Client.hs  Default.hs  Internal.hs  Main.hs  Opts.hs
src/Server/: Class.hs  Config.hs  Error.hs  Internal.hs  Main.hs  Setup.hs  Tx.hs
src/Server/Endpoints/: AddSignature.hs  Balance.hs  Funds.hs  Mint.hs  Ping.hs  Servant.hs  SubmitTx.hs
src/Server/Endpoints/Tx/: Class.hs  Internal.hs  New.hs  Submit.hs
src/Test/: Internal.hs  Reference.hs  TestingServer.hs
src/TestingServer/: Main.hs  OffChain.hs  OnChain.hs
test/: Main.hs
test/Tests/: DefaultClient.hs  Internal.hs  Reference.hs  TestingServer.hs
testnet/: config.json
