cabal-version:      3.0

name:               cardano-server
version:            0.1.0.0

maintainer:         encoins.crypto@ud.me

-- Plutus language settings
common lang
    default-language:   Haskell2010
    ghc-options:
      -fwarn-redundant-constraints
      -Wall
      -Widentities
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -Wnoncanonical-monad-instances
      -Wredundant-constraints
      -Wno-unused-do-bind
      
      -- See Plutus Tx readme
      -fno-ignore-interface-pragmas
      -fno-omit-interface-pragmas
      -fno-specialise
      -fno-strictness
      -fobject-code       
      -fplugin-opt PlutusTx.Plugin:defer-errors

library
    import: lang
    exposed-modules: 
      Client.Internal
      Client.Main
      Client.Opts
      Server.Config
      Server.Endpoints.Balance 
      Server.Endpoints.Mint 
      Server.Endpoints.Ping
      Server.Internal
      Server.Main
      Server.Tx
      Test.Internal
      TestingServer.Main
      Utils.Logger
      Utils.Servant
      Utils.Wait
    other-modules:
      Test.TestingServer
      TestingServer.OnChain
      TestingServer.OffChain
    default-extensions:
      PartialTypeSignatures
    build-depends:
      base                          >= 4.9 && < 5,
      aeson                                  -any,
      aeson-casing                           -any,
      bytestring                             -any,
      cardano-api                            -any,
      cardano-ledger-alonzo                  -any,
      containers                             -any,
      data-default                           -any,
      directory                              -any,
      exceptions                             -any,
      extra                                  -any,
      file-embed                             -any,
      filepath                               -any,
      http-client                            -any,
      http-types                             -any,
      mtl                                    -any,
      optparse-applicative                   -any,
      plutus-common                          -any,
      plutus-chain-index-core                -any,
      plutus-tx-plugin                       -any,
      plutus-tx                              -any,
      plutus-ledger                          -any,
      plutus-ledger-api                      -any,
      plutus-ledger-constraints              -any,
      plutus-script-utils                    -any,
      prettyprinter                          -any,
      random                                 -any,
      servant                                -any,
      servant-server                         -any,
      text                                   -any,
      time                                   -any,
      warp                                   -any,

    hs-source-dirs: src

extra-source-files: testnet/protocol-parameters.json

executable testingServer
  default-language: Haskell2010
  hs-source-dirs: app/Server
  main-is: Main.hs
  build-depends: 
    base                          >= 4.9 && < 5,
    cardano-server                             ,

executable testingClient
  default-language: Haskell2010
  hs-source-dirs: app/Client
  main-is: Main.hs
  build-depends: 
    base                          >= 4.9 && < 5,
    cardano-server                             ,