cabal-version:      3.0

name:               cardano-server
version:            0.1.0.0

author:             Grigory Petrov
                    Vladimir Sinyakov
maintainer:         team@encoins.io

-- Plutus language settings
common lang
    default-language:   Haskell2010
    ghc-options:
      -fwarn-redundant-constraints
      -Wall
      -Widentities
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -Wnoncanonical-monad-instances
      -Wredundant-constraints
      -Wno-unused-do-bind
      
      -- See Plutus Tx readme
      -fno-ignore-interface-pragmas
      -fno-omit-interface-pragmas
      -fno-specialise
      -fno-strictness
      -fobject-code       
      -fplugin-opt PlutusTx.Plugin:defer-errors

library
    import: lang
    exposed-modules: 
      Client.Class
      Client.Client
      Client.Default
      Client.Opts
      Server.Class
      Server.Config
      Server.Endpoints.Funds 
      Server.Endpoints.Ping
      Server.Endpoints.Tx.Class
      Server.Endpoints.Tx.Internal
      Server.Endpoints.Tx.New
      Server.Endpoints.Tx.Submit      
      Server.Error
      Server.Internal
      Server.Main
      Server.Tx
      TestingServer.Main
      TestingServer.OnChain
      TestingServer.OffChain
      Utils.Logger
      Utils.Servant
      Utils.Wait
    other-modules:
    default-extensions:
      PartialTypeSignatures
    build-depends:
      base                          >= 4.9 && < 5,
      aeson                                  -any,
      aeson-casing                           -any,
      bytestring                             -any,
      cardano-api                            -any,
      cardano-ledger-alonzo                  -any,
      containers                             -any,
      data-default                           -any,
      directory                              -any,
      exceptions                             -any,
      extra                                  -any,
      filepath                               -any,
      hex-text                               -any,
      http-client                            -any,
      http-types                             -any,
      mtl                                    -any,
      optparse-applicative                   -any,
      plutus-apps-extra                      -any,
      plutus-chain-index-core                -any,
      plutus-tx-plugin                       -any,
      plutus-tx                              -any,
      plutus-ledger                          -any,
      plutus-ledger-api                      -any,
      plutus-ledger-constraints              -any,
      plutus-script-utils                    -any,
      prettyprinter                          -any,
      random                                 -any,
      servant                                -any,
      servant-server                         -any,
      text                                   -any,
      time                                   -any,
      wai-cors                               -any,
      warp                                   -any
    hs-source-dirs: src

test-suite cardano-server-test
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test
  Ghc-Options:          -rtsopts
                        -fplugin-opt PlutusTx.Plugin:defer-errors
  Main-Is:              Main.hs
  Other-Modules:        Tests.DefaultClient
                        Tests.Internal
                        Tests.Reference
                        Tests.TestingServer
  Build-Depends:
    base                          >= 4.9 && < 5,
    aeson                                  -any,
    bytestring                             -any,
    cardano-server                         -any,
    containers                             -any,
    directory                              -any,
    mtl                                    -any,
    plutus-apps-extra                      -any,
    plutus-tx                              -any,
    plutus-ledger                          -any,
    text                                   -any,
    time                                   -any

executable testingServer
  default-language: Haskell2010
  hs-source-dirs: app/Server
  main-is: Main.hs
  build-depends: 
    base                          >= 4.9 && < 5,
    cardano-server                             ,

executable testingClient
  default-language: Haskell2010
  hs-source-dirs: app/Client
  main-is: Main.hs
  build-depends: 
    base                          >= 4.9 && < 5,
    cardano-server                             ,
