cabal-version:      3.0

name:               cardano-server-client-example
version:            1.0.0.0

author:             Grigory Petrov
                    Vladimir Sinyakov
maintainer:         team@encoins.io

-- Plutus language settings
common lang
    default-language:   Haskell2010
    default-extensions:
      AllowAmbiguousTypes,
      BangPatterns,
      ConstraintKinds,
      DataKinds,
      DeriveAnyClass,
      DeriveFunctor,
      DeriveGeneric,
      DerivingStrategies,
      FlexibleContexts,
      FlexibleInstances,
      GeneralizedNewtypeDeriving,
      ImplicitParams,
      InstanceSigs,
      LambdaCase,
      MultiParamTypeClasses,
      MultiWayIf,
      NumericUnderscores,
      QuantifiedConstraints,
      PatternSynonyms,
      RankNTypes,
      RecordWildCards,
      ScopedTypeVariables,
      StandaloneDeriving,
      StandaloneKindSignatures,
      TypeApplications,
      TypeFamilies,
      TypeOperators,
      TupleSections,
      UndecidableInstances,
      UndecidableSuperClasses,
      ViewPatterns
    ghc-options:
      -fwarn-redundant-constraints
      -Wall
      -Widentities
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -Wnoncanonical-monad-instances
      -Wredundant-constraints
      -Wno-unused-do-bind

      -- See Plutus Tx readme
      -fno-ignore-interface-pragmas
      -fno-omit-interface-pragmas
      -fno-specialise
      -fno-strictness
      -fobject-code
      -fplugin-opt PlutusTx.Plugin:defer-errors

library
    import: lang
    exposed-modules:
      Cardano.Server.Client.Example.Main
    other-modules:
    build-depends:
      base                          >= 4.9 && < 5,
      cardano-server                         -any,
      cardano-server-client                  -any,
      cardano-server-example                 -any,
      data-default                           -any,
      exceptions                             -any,
      file-embed                             -any,
      mtl                                    -any,
      optparse-applicative                   -any,
      plutus-apps-extra                      -any,
      plutus-ledger                          -any,
      plutus-tx                              -any,
      random                                 -any,
      servant-client                         -any,
      servant-server                         -any,
      split                                  -any,
      text                                   -any,
    hs-source-dirs: src

executable cardano-server-client-example
  default-language: Haskell2010
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
    base                          >= 4.9 && < 5,
    cardano-server-client-example              ,