cabal-version:      3.0

name:               cardano-server-client
version:            0.1.0.0

author:             Grigory Petrov
                    Vladimir Sinyakov
maintainer:         team@encoins.io

-- Plutus language settings
common lang
    default-language:   Haskell2010
    ghc-options:
      -fwarn-redundant-constraints
      -Wall
      -Widentities
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -Wnoncanonical-monad-instances
      -Wredundant-constraints
      -Wno-unused-do-bind
      
      -- See Plutus Tx readme
      -fno-ignore-interface-pragmas
      -fno-omit-interface-pragmas
      -fno-specialise
      -fno-strictness
      -fobject-code       
      -fplugin-opt PlutusTx.Plugin:defer-errors

library
    import: lang
    exposed-modules: 
      Cardano.Server.Client.Client
      Cardano.Server.Client.Gen
      Cardano.Server.Client.Handle
      Cardano.Server.Client.Internal
      Cardano.Server.Client.Opts
    other-modules:
    default-extensions:
      PartialTypeSignatures
    build-depends:
      base                          >= 4.9 && < 5,
      cardano-server                         -any,
      aeson                                  -any,
      bytestring                             -any,
      data-default                           -any,
      exceptions                             -any,
      http-client                            -any,
      http-types                             -any,
      mtl                                    -any,
      optparse-applicative                   -any,
      plutus-apps-extra                      -any,
      plutus-ledger                          -any,
      random                                 -any,
      servant                                -any,
      servant-client                         -any,
      servant-server                         -any,
      text                                   -any,
      QuickCheck -any,
      plutus-pab -any,
      cardano-ledger-shelley-test -any,
      cardano-api -any,

      cardano-node-emulator -any,
      hedgehog -any,
    hs-source-dirs: src