cabal-version:      3.0

name:               cardano-server-test
version:            1.0.0.0

author:             Grigory Petrov
                    Vladimir Sinyakov
maintainer:         team@encoins.io

-- Plutus language settings
common lang
    default-language:   Haskell2010
    ghc-options:
      -fwarn-redundant-constraints
      -Wall
      -Widentities
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -Wnoncanonical-monad-instances
      -Wredundant-constraints
      -Wno-unused-do-bind
      
      -- See Plutus Tx readme
      -fno-ignore-interface-pragmas
      -fno-omit-interface-pragmas
      -fno-specialise
      -fno-strictness
      -fobject-code       
      -fplugin-opt PlutusTx.Plugin:defer-errors

library
  import: lang
  exposed-modules:
    Cardano.Server.Test.Utils
  other-modules:
    Cardano.Server.Test.Internal
  build-depends:
    base                          >= 4.9 && < 5,
    aeson                                  -any,
    cardano-server                         -any,
    cardano-server-client                  -any,
    hspec                                  -any,
    mtl                                    -any,
    plutus-apps-extra                      -any,
    servant-client                         -any,
    text                                   -any,
  hs-source-dirs: test

test-suite cardano-server-test
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test
  Ghc-Options:          -rtsopts
                        -fplugin-opt PlutusTx.Plugin:defer-errors
                        -Wall
  Main-Is:              Main.hs
  Other-Modules:        
                        Cardano.Server.Client.OptsSpec
                        Cardano.Server.Endpoints.UtxosSpec
                        Cardano.Server.Endpoints.PingSpec
                        Cardano.Server.Endpoints.StatusSpec
                        Cardano.Server.Endpoints.Tx.ServerSpec
                        Cardano.Server.Endpoints.Tx.SubmitSpec
                        Cardano.Server.WalletEncryptionSpec
                        Cardano.Server.Test.Gen
                        Cardano.Server.Test.Internal
  Build-Depends:
    base                          >= 4.9 && < 5,
    bytestring                             -any,
    aeson                                  -any,
    cardano-addresses                      -any,
    cardano-server                         -any,
    cardano-server-example                 -any,
    cardano-server-client                  -any,
    cardano-server-client-example          -any,
    cardano-wallet-core                    -any,
    cryptonite                             -any,
    exceptions                             -any,
    hspec                                  -any,
    hspec-wai                              -any,
    http-types                             -any,
    memory                                 -any,
    mtl                                    -any,
    plutus-apps-extra                      -any,
    servant-client                         -any,
    text                                   -any,
    text-class                             -any,
    quickcheck-text                        -any,
    warp                                   -any,
    QuickCheck                             -any,